WebCore: Partial fix for https://bugs.webkit.org/show_bug.cgi?id=36564 Performance regression for setting content of <text> in SVG -and corresponding- <rdar://problem/7693963>

Reviewed by Darin Adler.

toClipPath() is extremely inefficient, so this patch removes the
call to it from RenderSVGResourceClipper::resourceBoundingBox()
which is very hot code in SVG with clip-paths. It is sufficient to
call unite with the objectBoundingBox(), which will return early if
objectBoundingBox() is empty.

* rendering/RenderSVGResourceClipper.cpp:
(WebCore::RenderSVGResourceClipper::resourceBoundingBox):

LayoutTests: Updated test for https://bugs.webkit.org/show_bug.cgi?id=36564
Performance regression for setting content of <text> in SVG
-and corresponding-
<rdar://problem/7693963>

Reviewed by Darin Adler.

* platform/mac/svg/custom/clip-path-referencing-use2-expected.txt:



Canonical link: https://commits.webkit.org/47938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56644 268f45cc-cd09-0410-ab3c-d52691b4dbfc